--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,6 @@ stages:
 lint-job:
     stage: lint
     script:
-        - pylint activity administrator clazz course semester student
+        - pylint activity administrator clazz course semester student util
     tags:
         - future-1
