--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,18 @@ before_script:
 
 stages:
     - lint
+    - test
 
 lint-job:
     stage: lint
     script:
         - pylint activity administrator clazz course semester student util
+    tags:
+        - future-1
+
+test-job:
+    stage: test
+    script:
+        - python manage.py test administrator.tests --keepdb
     tags:
         - future-1
