--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ lint-job:
 test-job:
     stage: test
     script:
-        - python manage.py test activity.tests --settings=backend.settings_test --keepdb
+        - python manage.py test activity.test --settings=backend.settings_test --keepdb
         - python manage.py test administrator.tests --settings=backend.settings_test --keepdb
         - python manage.py test clazz.tests --settings=backend.settings_test --keepdb
         - python manage.py test course.tests --settings=backend.settings_test --keepdb
