Refactor(repo): modify all test
Ref #21

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,10 +20,10 @@ test-job:
     stage: test
     script:
         - python manage.py test activity.test --settings=config.settings_test --keepdb
-        - python manage.py test administrator.tests --settings=config.settings_test --keepdb
-        - python manage.py test clazz.tests --settings=config.settings_test --keepdb
-        - python manage.py test course.tests --settings=config.settings_test --keepdb
-        - python manage.py test semester.tests --settings=config.settings_test --keepdb
-        - python manage.py test student.tests --settings=config.settings_test --keepdb
+        - python manage.py test administrator.test --settings=config.settings_test --keepdb
+        - python manage.py test clazz.test --settings=config.settings_test --keepdb
+        - python manage.py test course.test --settings=config.settings_test --keepdb
+        - python manage.py test semester.test --settings=config.settings_test --keepdb
+        - python manage.py test student.test --settings=config.settings_test --keepdb
     tags:
         - future-1
