Chore(config): change database config
Close #148

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,11 +19,11 @@ lint-job:
 test-job:
   stage: test
   script:
-    - python manage.py test activity.test --settings=config.settings_test --keepdb
-    - python manage.py test administrator.test --settings=config.settings_test --keepdb
-    - python manage.py test clazz.test --settings=config.settings_test --keepdb
-    - python manage.py test course.test --settings=config.settings_test --keepdb
-    - python manage.py test semester.test --settings=config.settings_test --keepdb
-    - python manage.py test student.test --settings=config.settings_test --keepdb
+    - python manage.py test activity.test --settings=config.settings_sample --keepdb
+    - python manage.py test administrator.test --settings=config.settings_sample --keepdb
+    - python manage.py test clazz.test --settings=config.settings_sample --keepdb
+    - python manage.py test course.test --settings=config.settings_sample --keepdb
+    - python manage.py test semester.test --settings=config.settings_sample --keepdb
+    - python manage.py test student.test --settings=config.settings_sample --keepdb
   tags:
     - future-1
